# cubing

./: README.md  Rubiks.hs  rubiks.cabal
