cabal-version:   3.0
name:            rubiks
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable rubiks
    import:           warnings
    main-is:          Rubiks.hs
    build-depends:
        base ^>=4.18.2.1,
        text-ansi,
        containers,
        optics-core,
    hs-source-dirs:   .
    default-language: Haskell2010
